# ChangeLog for dev-python/pyside
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.62 2014/08/27 12:15:40 blueness Exp $

  27 Aug 2014; Anthony G. Basile <blueness@gentoo.org> pyside-1.1.2-r1.ebuild,
  pyside-1.2.1-r1.ebuild, pyside-1.2.2.ebuild:
  Keyword ~ppc ~ppc64, bug #495116

  21 Jun 2014; Ian Delaney <idella4@gentoo.org> pyside-1.2.2.ebuild:
  add py3.4 support

*pyside-1.2.2 (23 May 2014)

  23 May 2014; Davide Pesavento <pesa@gentoo.org> +pyside-1.2.2.ebuild:
  Version bump.

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> pyside-1.2.1-r1.ebuild:
  x86 stable wrt bug #499408

*pyside-1.2.1-r1 (25 Dec 2013)

  25 Dec 2013; Davide Pesavento <pesa@gentoo.org> +pyside-1.2.1-r1.ebuild,
  -pyside-1.2.1.ebuild:
  Add python 3.3 support. Fix detection of media-libs/phonon, thanks to
  Gianluigi Tiesi <sherpya@gmail.com> in bug 475786.

  25 Dec 2013; Davide Pesavento <pesa@gentoo.org> -pyside-1.2.0.ebuild:
  old

*pyside-1.2.1 (14 Nov 2013)

  14 Nov 2013; Davide Pesavento <pesa@gentoo.org> +pyside-1.2.1.ebuild:
  Version bump.

  04 Oct 2013; Mike Frysinger <vapier@gentoo.org> pyside-1.1.2-r1.ebuild:
  Mark arm stable #460234.

*pyside-1.2.0 (15 Aug 2013)

  15 Aug 2013; Davide Pesavento <pesa@gentoo.org> +pyside-1.2.0.ebuild,
  metadata.xml:
  Version bump (bug 477844); add designer USE flag.

  08 Mar 2013; Davide Pesavento <pesa@gentoo.org> -pyside-1.1.2.ebuild:
  old

  07 Mar 2013; Agostino Sarubbo <ago@gentoo.org> pyside-1.1.2-r1.ebuild:
  Stable for x86, wrt bug #460234

  07 Mar 2013; Agostino Sarubbo <ago@gentoo.org> pyside-1.1.2-r1.ebuild:
  Stable for amd64, wrt bug #460234

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> pyside-1.1.2-r1.ebuild,
  pyside-1.1.2.ebuild:
  Move Qt dependencies to the new category

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> pyside-1.1.2-r1.ebuild,
  pyside-1.1.2.ebuild:
  Move Qt dependencies to the new category
