@@ -7,23 +7,25 @@ DIST pyside-qt4.8+1.2.1.tar.bz2 3764773 SHA256 f54c4350c662ecc59a2e0c95b06286a9a
 DIST pyside-qt4.8+1.2.2.tar.bz2 3765472 SHA256 a1a9df746378efe52211f1a229f77571d1306fb72830bbf73f0d512ed9856ae1 SHA512 3a1d46c48ac71c3b138e1dc398d1d2a87aff558eace275303e233f78d03e32c6d53cf390db5e7112f44da9b17aa88ed16a30f6f83b2073c1f494e61b962e4c46 WHIRLPOOL 5ac5eb5032fbc791e955eb0b2b0f1443e43867408a7b6c41854db1cab466714509c035e8271f5b0b3078309be001d5bcea498601b97f540e7775e87bdbc1c0c8
 EBUILD pyside-1.1.2-r1.ebuild 3318 SHA256 8f170e654de8bfb3f26d078532c53d30afb45c696b6a14b4257f71ab40f9d9a6 SHA512 e26c764dc2d90a4d57867b687a6a29ca145a59d11c8daeafb4ca2b0d7a46790d98f1f1068576bd07b0e319bf7a1fd1b22aa4ff82f225d08e4b6458bd964f8b16 WHIRLPOOL b5d988ec33a593114e4290eb935a6399103196757c889ae5ff0e809e46c12fbf66c1fc5b6c8f22e5a0ddf5802fa78476c487114683cb998bbc7231448736d9c0
 EBUILD pyside-1.2.1-r1.ebuild 3670 SHA256 6d2c3d87590f8408cfabf18a84e28cdbcfdb6275a6bd25e479c34b4c3d007001 SHA512 58d11551e4822e580bae87fcc75734902d82e8e76c66c2ad6ee89e7ab776849ca66a96d9634b22be96a5aa97411fb3f8d7e23540ee46e721028b063df9b0cee7 WHIRLPOOL 4c92a989a29b8a757d86913b931027667af03f8b4ebb17cc6475cf5d0da7a68c5b1d6d2d95f65378addb3189221a4164ce7e5a9013aae23676880eeb99a415fd
-EBUILD pyside-1.2.2.ebuild 3672 SHA256 442cc3194768086b85790168024d9adfbe6867eaf1d0988ce8c2eefd9d8e3b0d SHA512 a3dd72074c941574e575815c9ae79e20b1db150bb8e94ceadc423640590d67976c29e6c657ac73c44e36b3de09eec306a5c327ce0ebbd7910476c2bf1fd5f092 WHIRLPOOL 79cf473ef683037655031e3e00e1b3a7aa69a575cccc318e51cd484e8d12c1c277ca4fdae6c87f3b78dfc6c15f7290b1b133427991a4c7fae4352a2f56eb58ba
-MISC ChangeLog 8719 SHA256 34b710e5d1214b2a88d6af79ebbf026c154a7d023e57f29d5e595ec662dd2b92 SHA512 706689d1a60185ae0d1f249f78ca294802fc79e4e28941db82cbb7be9821a15a8748c4897f82f6f01015eef4fc5100e80ceb3694ba47df8a6f226775239ffbc8 WHIRLPOOL 0c13c80048943c4cf4f970fd707a1310881fb3a500288ff017dfed901fa0a7fbdeab5194b7d3462fa2391e5a25ffa761108112568551e4fb8430f4e3bee0af4d
+EBUILD pyside-1.2.2.ebuild 3702 SHA256 908e78d1bf44ed6ae2db45211a37ef9a28ab13ffb45f639fe772e74efd2a7888 SHA512 f5b9c66b40585bd2f8ed147af3b3bb1649ce7fc41369686c86c41a763ac5089783165153c84e770d7273ed9afe293e86e2da6e57864cdde3d4cd2ea948377927 WHIRLPOOL 5d5f95f2154eed7ee57d45b45446de014e4f5d3bbc7ca3be8e79d254c0d440d97424b130c29319ceea15ca205e870509018320fdb3c95987c284207a5cf96c97
+MISC ChangeLog 8872 SHA256 b16ddbe47045907d60ba8786e66f717dfc3540719326b701b0699b1d900e8e87 SHA512 a8c8d1f937b65e4dfaf1c5377c4b227a45622903a92483b2e65660b244ff84fd1702ecccfe4140a1faf7fb1419e86b0d7c36ffe82a2a030c73f0885bcb19105e WHIRLPOOL ce2addf4ed39622c81f2b0f6b7da2a014ad9619022da0528ce1ecf7714f15c308ccfc32b2226feb033d123a3b796bb0f840aea1c547861beb4adc00a3549bfb2
 MISC metadata.xml 974 SHA256 53b7dcfa0ed68127d1c447b71efe4aa2ca906e3d42a46b4e3426c59907e0e5eb SHA512 328ccf15280610363142d790251130b41f252f93ff383b4f301860296347679643e0ee7c4411d9f691767b95440caca805c024b2a6f6150e7e12b2db6500a9ea WHIRLPOOL e5f46a7da029459a1ca8cf34b46c341c0c425953fab62e597443c1eeac9819873f916309c0ca2859249227693e733c59131708f8c66c42a065910fc3734b029f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJT/cySAAoJEJOE+m71LUu6uvwP+wSDDZqmKeoCR1ZVhlvCxxTn
-09LTuT0uD6IYGo2KzX2XpeZ9evHMcMZhJQjk/hQvDcrQ8SOKaj7foeeFeB49Qc6s
-4yeqvrjl0F7uC9kVIpUryEUnSa8Xetx673hLpjiM9PTw4LRRHsolGaWPFafChPr0
-JnLnSyaxQQOi8Yk1rqpOQkI1SPoD5ydXCaIzzQOvkyEQtApnQ7Xw7FymBobLLspQ
-Djs3e+ZQy3WrGTWabxAtJtdJqs7+2O71US9F833A/i251kpCDO7dth3CHtrq/1gE
-8Lrv4ofI8YrRAp7G03GGZ8hrNWpOGZib1alaxrogEWASHP5PoHijB8CF73CPnPTV
-/fHTYWi2lIZTd2OKaIBE+tFxQrsfzSNP0GLTSUVI5SlouQcBEjfCK/anEZG7lLR1
-4N8rx0+paGEoLrE0/MUp6BBMPnxdinlO+wt4+7ni2xcYNhcto2dA3pyyZe1t5yOu
-jWk0Nl8Nk2jlHfOM8w+PZrLay3TJPINIMJu5676JotJ4zUENJBK6gauMFzOWEMDt
-lVbPftzH3mBIfII2gI5FPOMQZ3xph9EOdgiInLBBoitt1tCn7mq9JcW7LxS4+anq
-K3Vdt4zNwuLA37PLCoQhJa/EsHWESgV2rdGIhOSfbf1KK4txektU+AzorjeAIO+I
-x7DmSiXUYiV1RTxB2OvU
-=GaHG
+iQJ8BAEBCABmBQJUHh7wXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9YjwQAJ9ttztlGK5uFy1j4bPdao70
+SDMGTQeJt9fyu60sKXoQoou+6x2LW4bGFqjolQByhDleItBj1auEYKBWpu3YeofJ
+eQg/N2JLttCh0HMhbMbBkz/2RpWScHroIygBJU5nO1hY0Pu5tSIWMoew8u85RWPZ
+JF1FTQUJRBg/QG3CaA9W1oGKF1vjet7d/bL7Zu+inPoTpgAXGzpciDsA5/cjMTnr
+Pmp2mkxm2E0HyVC6Rwr2pG7/QypjqLrFOPBSACK78T/W2YJKuDIopmmyOfveL5BZ
+yROBEsxoT08oFSCJ2G/8ahHay3oeUw3aDUAwJtez3Tf/I77TAr4dzfjGltjG0HD6
++ri2p8n+NStZ39a8/EJKh446112X1kLwiHME2n5h2jAme8aQCrInFAzTWNAFpOQJ
+XH7r38dE58U56ZKyyaW+CZzrtSlgpkq52CZ8i+p54G6/tzD3HWwg11lgxzDtAhgy
+A6Te/L3rHUO2bFniTcg5RC5AO7t7j5F+4Zq0YIdcSe9/2ikXr/O/+YCWyruyJjEn
+40xKHv9p1xO8x5rfhDgabqsZFcGXMF6t+5eUTCKnaV8/nC2wriMCDUMuhh1mXbvH
+Z+tX0dQgWx2CoYSRmhcx/R6LsyW5rjlnDTOB1BosQBMP+bEzbcEhLw6FbgiIAi4v
+IRo6xFHjbFWpi2xpbPj3
+=Cstb
 -----END PGP SIGNATURE-----
