@@ -1,12 +1,12 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/pyside-1.2.2.ebuild,v 1.3 2014/08/27 12:15:40 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/pyside-1.2.2.ebuild,v 1.4 2014/09/21 00:42:17 pesa Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3,3_4} )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} )
 
-inherit multilib cmake-utils python-r1 virtualx
+inherit cmake-utils multilib python-r1 virtualx
 
 MY_P="${PN}-qt4.8+${PV}"
 
@@ -17,9 +17,10 @@ SRC_URI="http://download.qt-project.org/official_releases/${PN}/${MY_P}.tar.bz2"
 LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux"
-IUSE="X declarative designer help multimedia opengl phonon script scripttools sql svg test webkit xmlpatterns"
 
+IUSE="X declarative designer help multimedia opengl phonon script scripttools sql svg test webkit xmlpatterns"
 REQUIRED_USE="
+	${PYTHON_REQUIRED_USE}
 	declarative? ( X )
 	designer? ( X )
 	help? ( X )
@@ -34,9 +35,10 @@ REQUIRED_USE="
 "
 
 # Minimal supported version of Qt.
-QT_PV="4.7.0:4"
+QT_PV="4.8.5:4"
 
 RDEPEND="
+	${PYTHON_DEPS}
 	>=dev-python/shiboken-${PV}[${PYTHON_USEDEP}]
 	>=dev-qt/qtcore-${QT_PV}
 	X? (
@@ -44,7 +46,7 @@ RDEPEND="
 		>=dev-qt/qttest-${QT_PV}
 	)
 	declarative? ( >=dev-qt/qtdeclarative-${QT_PV} )
-	designer? ( || ( dev-qt/designer:4 <dev-qt/qtgui-4.8.5:4 ) )
+	designer? ( >=dev-qt/designer-${QT_PV} )
 	help? ( >=dev-qt/qthelp-${QT_PV} )
 	multimedia? ( >=dev-qt/qtmultimedia-${QT_PV} )
 	opengl? ( >=dev-qt/qtopengl-${QT_PV} )
@@ -76,6 +78,8 @@ src_prepare() {
 		cp "${FILESDIR}"/rpath.cmake . || die
 		sed -i -e '1iinclude(rpath.cmake)' CMakeLists.txt || die
 	fi
+
+	cmake-utils_src_prepare
 }
 
 src_configure() {
@@ -117,15 +121,14 @@ src_configure() {
 }
 
 src_compile() {
-	python_foreach_impl cmake-utils_src_make
+	python_foreach_impl cmake-utils_src_compile
 }
 
 src_test() {
 	local PYTHONDONTWRITEBYTECODE
 	export PYTHONDONTWRITEBYTECODE
 
-	local VIRTUALX_COMMAND="cmake-utils_src_test"
-	python_foreach_impl virtualmake
+	VIRTUALX_COMMAND="cmake-utils_src_test" python_foreach_impl virtualmake
 }
 
 src_install() {
