@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pyside
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.62 2014/08/27 12:15:40 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.63 2014/09/21 00:42:17 pesa Exp $
+
+  21 Sep 2014; Davide Pesavento <pesa@gentoo.org> pyside-1.2.2.ebuild:
+  Add missing PYTHON_DEPS and PYTHON_REQUIRED_USE. Drop deprecated python
+  targets.
 
   27 Aug 2014; Anthony G. Basile <blueness@gentoo.org> pyside-1.1.2-r1.ebuild,
   pyside-1.2.1-r1.ebuild, pyside-1.2.2.ebuild:
